--- a/src/mylangchain_app/01RAG/010_RAG_Pipeline_2.1TextSplitter.ipynb
+++ b/src/mylangchain_app/01RAG/010_RAG_Pipeline_2.1TextSplitter.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "id": "4a0e6609",
    "metadata": {},
    "outputs": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "1a7fe9aa",
    "metadata": {},
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "id": "f00233a6",
    "metadata": {},
    "outputs": [
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "id": "d3b1d6d1",
    "metadata": {},
    "outputs": [
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "id": "edaab543",
    "metadata": {},
    "outputs": [
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "id": "df5cba1f",
    "metadata": {},
    "outputs": [
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "id": "ac8b9618",
    "metadata": {},
    "outputs": [
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "id": "96ee4688",
    "metadata": {},
    "outputs": [
@@ -894,29 +894,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "id": "b2248589",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#%pip install -q transformers"
+    "#!pip install transformers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "d6009baa",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'transformers'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtransformers\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m GPT2TokenizerFast\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mlangchain\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mtext_splitter\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m TokenTextSplitter\n\u001b[32m      4\u001b[39m \u001b[38;5;66;03m# GPT-2 모델의 토크나이저 로드\u001b[39;00m\n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'transformers'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Created a chunk of size 321, which is longer than the specified 300\n",
+      "Created a chunk of size 362, which is longer than the specified 300\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 원본 텍스트 미리보기:\n",
+      " Semantic Search (의미론적 검색)\n",
+      "\n",
+      "정의: 사용자의 질의를 단순한 키워드 매칭이 아니라 문맥과 의미를 분석하여 관련 정보를 반환하는 검색 방식.\n",
+      "예시: \"우주 탐사\"를 검색하면 \"아폴로 11호\", \"화성 탐사 로버\"와 같은 연관 정보가 포함된 결과를 제공함.\n",
+      "연관 키워드: 자연어 처리, 검색 알고리즘, 데이터 마이닝\n",
+      "\n",
+      "FAISS (Faceboo\n",
+      "\n",
+      " 총 23개의 청크로 분할됨\n",
+      "\n",
+      " Chunk 1 (25자):\n",
+      "Semantic Search (의미론적 검색)\n",
+      "\n",
+      " Chunk 2 (157자):\n",
+      "정의: 사용자의 질의를 단순한 키워드 매칭이 아니라 문맥과 의미를 분석하여 관련 정보를 반환하는 검색 방식.\n",
+      "예시: \"우주 탐사\"를 검색하면 \"아폴로 11호\", \"화성 탐사 로버\"와 같은 연관 정보가 포함된 결과를 제공함.\n",
+      "연관 키워드: 자연어 처리, 검색 알고리즘, 데이터 마이닝\n",
+      "\n",
+      " Chunk 3 (37자):\n",
+      "FAISS (Facebook AI Similarity Search)\n",
+      "\n",
+      " Chunk 4 (176자):\n",
+      "정의: FAISS는 페이스북에서 개발한 고속 유사성 검색 라이브러리로, 특히 대규모 벡터 집합에서 유사 벡터를 효과적으로 검색할 수 있도록 설계되었습니다.\n",
+      "예시: 수백만 개의 이미지 벡터 중에서 비슷한 이미지를 빠르게 찾는 데 FAISS가 사용될 수 있습니다.\n",
+      "연관키워드: 벡터 검색, 머신러닝, 데이터베이스 최적화\n",
+      "\n",
+      " Chunk 5 (143자):\n",
+      "Embedding (임베딩)\n",
+      "\n",
+      "정의: 단어나 문장을 벡터 공간에 매핑하여 의미적으로 유사한 것들이 가까이 위치하도록 하는 기법.\n",
+      "예시: \"강아지\"와 \"고양이\"의 벡터 표현이 유사하게 위치함.\n",
+      "연관 키워드: 벡터화, 자연어 처리, 딥러닝\n",
+      "\n",
+      "Token (토큰)\n",
+      "\n",
+      "\n",
+      " 첫 번째 청크의 토큰 개수: 23\n",
+      " 첫 번째 청크의 토큰 리스트: ['Sem', 'antic', 'ĠSearch', 'Ġ(', 'ìĿ', 'ĺ', 'ë', '¯', '¸', 'ë', '¡', 'ł', 'ì', 'ł', 'ģ', 'Ġ', 'ê', '²', 'Ģ', 'ì']\n"
      ]
     }
    ],
@@ -957,19 +999,259 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "a6dd61dc",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'transformers'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtransformers\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m GPT2TokenizerFast\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mlangchain\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mtext_splitter\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m CharacterTextSplitter\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mlangchain\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mschema\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Document\n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'transformers'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GPT-2 토크나이저 로딩 중...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Token indices sequence length is longer than the specified maximum sequence length for this model (5172 > 1024). Running this sequence through the model will result in indexing errors\n",
+      "Created a chunk of size 321, which is longer than the specified 300\n",
+      "Created a chunk of size 362, which is longer than the specified 300\n",
+      "Created a chunk of size 321, which is longer than the specified 100\n",
+      "Created a chunk of size 362, which is longer than the specified 100\n",
+      "Created a chunk of size 237, which is longer than the specified 100\n",
+      "Created a chunk of size 201, which is longer than the specified 100\n",
+      "Created a chunk of size 226, which is longer than the specified 100\n",
+      "Created a chunk of size 236, which is longer than the specified 100\n",
+      "Created a chunk of size 180, which is longer than the specified 100\n",
+      "Created a chunk of size 240, which is longer than the specified 100\n",
+      "Created a chunk of size 226, which is longer than the specified 100\n",
+      "Created a chunk of size 205, which is longer than the specified 100\n",
+      "Created a chunk of size 202, which is longer than the specified 100\n",
+      "Created a chunk of size 170, which is longer than the specified 100\n",
+      "Created a chunk of size 193, which is longer than the specified 100\n",
+      "Created a chunk of size 230, which is longer than the specified 100\n",
+      "Created a chunk of size 199, which is longer than the specified 100\n",
+      "Created a chunk of size 206, which is longer than the specified 100\n",
+      "Created a chunk of size 185, which is longer than the specified 100\n",
+      "Created a chunk of size 192, which is longer than the specified 100\n",
+      "Created a chunk of size 207, which is longer than the specified 100\n",
+      "Created a chunk of size 202, which is longer than the specified 100\n",
+      "Created a chunk of size 321, which is longer than the specified 300\n",
+      "Created a chunk of size 362, which is longer than the specified 300\n",
+      "Created a chunk of size 321, which is longer than the specified 300\n",
+      "Created a chunk of size 362, which is longer than the specified 300\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "토크나이저 로딩 완료\n",
+      "파일 읽기 성공: ../data/ai-terminology.txt\n",
+      "원본 텍스트 미리보기:\n",
+      "--------------------------------------------------\n",
+      "Semantic Search (의미론적 검색)\n",
+      "\n",
+      "정의: 사용자의 질의를 단순한 키워드 매칭이 아니라 문맥과 의미를 분석하여 관련 정보를 반환하는 검색 방식.\n",
+      "예시: \"우주 탐사\"를 검색하면 \"아폴로 11호\", \"화성 탐사 로버\"와 같은 연관 정보가 포함된 결과를 제공함.\n",
+      "연관 키워드: 자연어 처리, 검색 알고리즘, 데이터 마이닝\n",
+      "\n",
+      "FAISS (Faceboo...\n",
+      "\n",
+      "전체 텍스트 길이: 3036자\n",
+      "\n",
+      "============================================================\n",
+      "GPT-2 토크나이저 기본 정보\n",
+      "============================================================\n",
+      "모델명: gpt2\n",
+      "어휘 크기: 50,257개\n",
+      "최대 입력 길이: 1,024 토큰\n",
+      "패딩 토큰: None\n",
+      "시작 토큰: <|endoftext|>\n",
+      "끝 토큰: <|endoftext|>\n",
+      "언노운 토큰: <|endoftext|>\n",
+      "\n",
+      "원본 텍스트 토큰 개수: 5,172개\n",
+      "문자 대 토큰 비율: 0.59 (문자/토큰)\n",
+      "\n",
+      "============================================================\n",
+      "토크나이저 동작 확인\n",
+      "============================================================\n",
+      "테스트 텍스트: RAG는 검색 기반의 텍스트 생성 모델입니다. Hello, AI!\n",
+      "\n",
+      "1. 토큰화 결과: ['RAG', 'ë', 'Ĭ', 'Ķ', 'Ġ', 'ê', '²', 'Ģ', 'ì', 'ĥ', 'ī', 'Ġ', 'ê', '¸', '°', 'ë', '°', 'ĺ', 'ìĿ', 'ĺ', 'Ġ', 'í', 'ħ', 'į', 'ì', 'Ĭ', '¤', 'í', 'Ĭ', '¸', 'Ġì', 'ĥ', 'Ŀ', 'ì', 'Ħ', '±', 'Ġë', 'ª', '¨', 'ë', 'į', '¸', 'ì', 'ŀ', 'ħ', 'ëĭ', 'Ī', 'ëĭ', '¤', '.', 'ĠHello', ',', 'ĠAI', '!']\n",
+      "   토큰 개수: 54개\n",
+      "\n",
+      "2. 인코딩 결과: [33202, 167, 232, 242, 220, 166, 110, 222, 168, 225, 231, 220, 166, 116, 108, 167, 108, 246, 35975, 246, 220, 169, 227, 235, 168, 232, 97, 169, 232, 116, 23821, 225, 251, 168, 226, 109, 31619, 103, 101, 167, 235, 116, 168, 252, 227, 46695, 230, 46695, 97, 13, 18435, 11, 9552, 0]\n",
+      "   토큰 ID 개수: 54개\n",
+      "\n",
+      "3. 디코딩 결과: RAG는 검색 기반의 텍스트 생성 모델입니다. Hello, AI!\n",
+      "\n",
+      "4. 토큰별 ID 매핑:\n",
+      "    1. 'RAG' -> 33202\n",
+      "    2. 'ë' -> 167\n",
+      "    3. 'Ĭ' -> 232\n",
+      "    4. 'Ķ' -> 242\n",
+      "    5. 'Ġ' -> 220\n",
+      "    6. 'ê' -> 166\n",
+      "    7. '²' -> 110\n",
+      "    8. 'Ģ' -> 222\n",
+      "    9. 'ì' -> 168\n",
+      "   10. 'ĥ' -> 225\n",
+      "   11. 'ī' -> 231\n",
+      "   12. 'Ġ' -> 220\n",
+      "   13. 'ê' -> 166\n",
+      "   14. '¸' -> 116\n",
+      "   15. '°' -> 108\n",
+      "   16. 'ë' -> 167\n",
+      "   17. '°' -> 108\n",
+      "   18. 'ĺ' -> 246\n",
+      "   19. 'ìĿ' -> 35975\n",
+      "   20. 'ĺ' -> 246\n",
+      "   21. 'Ġ' -> 220\n",
+      "   22. 'í' -> 169\n",
+      "   23. 'ħ' -> 227\n",
+      "   24. 'į' -> 235\n",
+      "   25. 'ì' -> 168\n",
+      "   26. 'Ĭ' -> 232\n",
+      "   27. '¤' -> 97\n",
+      "   28. 'í' -> 169\n",
+      "   29. 'Ĭ' -> 232\n",
+      "   30. '¸' -> 116\n",
+      "   31. 'Ġì' -> 23821\n",
+      "   32. 'ĥ' -> 225\n",
+      "   33. 'Ŀ' -> 251\n",
+      "   34. 'ì' -> 168\n",
+      "   35. 'Ħ' -> 226\n",
+      "   36. '±' -> 109\n",
+      "   37. 'Ġë' -> 31619\n",
+      "   38. 'ª' -> 103\n",
+      "   39. '¨' -> 101\n",
+      "   40. 'ë' -> 167\n",
+      "   41. 'į' -> 235\n",
+      "   42. '¸' -> 116\n",
+      "   43. 'ì' -> 168\n",
+      "   44. 'ŀ' -> 252\n",
+      "   45. 'ħ' -> 227\n",
+      "   46. 'ëĭ' -> 46695\n",
+      "   47. 'Ī' -> 230\n",
+      "   48. 'ëĭ' -> 46695\n",
+      "   49. '¤' -> 97\n",
+      "   50. '.' -> 13\n",
+      "   51. 'ĠHello' -> 18435\n",
+      "   52. ',' -> 11\n",
+      "   53. 'ĠAI' -> 9552\n",
+      "   54. '!' -> 0\n",
+      "\n",
+      "============================================================\n",
+      "CharacterTextSplitter with HuggingFace 토크나이저\n",
+      "============================================================\n",
+      "총 23개의 청크로 분할됨\n",
+      "\n",
+      "처음 3개 청크 분석:\n",
+      "\n",
+      "Chunk 1:\n",
+      "  문자 수: 25자\n",
+      "  토큰 수: 23개\n",
+      "  토큰 ID 수: 23개\n",
+      "  내용 미리보기: Semantic Search (의미론적 검색)...\n",
+      "\n",
+      "Chunk 2:\n",
+      "  문자 수: 157자\n",
+      "  토큰 수: 321개\n",
+      "  토큰 ID 수: 321개\n",
+      "  내용 미리보기: 정의: 사용자의 질의를 단순한 키워드 매칭이 아니라 문맥과 의미를 분석하여 관련 정보를 반환하는 검색 방식.\n",
+      "예시: \"우주 탐사\"를 검색하면 \"아폴로 11호\", \"화성 탐사 로버\"...\n",
+      "\n",
+      "Chunk 3:\n",
+      "  문자 수: 37자\n",
+      "  토큰 수: 9개\n",
+      "  토큰 ID 수: 9개\n",
+      "  내용 미리보기: FAISS (Facebook AI Similarity Search)...\n",
+      "\n",
+      "============================================================\n",
+      "다양한 chunk_size 설정 비교\n",
+      "============================================================\n",
+      "\n",
+      "chunk_size=100 토큰:\n",
+      "  총 청크 수: 42개\n",
+      "  평균 토큰 수: 121.2개\n",
+      "  전체 토큰 수: 5,090개\n",
+      "  토큰 수 범위: 9~362개\n",
+      "\n",
+      "chunk_size=300 토큰:\n",
+      "  총 청크 수: 23개\n",
+      "  평균 토큰 수: 238.0개\n",
+      "  전체 토큰 수: 5,475개\n",
+      "  토큰 수 범위: 9~362개\n",
+      "\n",
+      "chunk_size=500 토큰:\n",
+      "  총 청크 수: 13개\n",
+      "  평균 토큰 수: 413.6개\n",
+      "  전체 토큰 수: 5,377개\n",
+      "  토큰 수 범위: 276~491개\n",
+      "\n",
+      "============================================================\n",
+      "토크나이저별 비교\n",
+      "============================================================\n",
+      "비교 텍스트: RAG는 검색 기반의 텍스트 생성 모델입니다. AI와 머신러닝을 활용합니다.\n",
+      "\n",
+      "GPT-2 토크나이저:\n",
+      "  토큰 수: 81개\n",
+      "  토큰: ['RAG', 'ë', 'Ĭ', 'Ķ', 'Ġ', 'ê', '²', 'Ģ', 'ì', 'ĥ', 'ī', 'Ġ', 'ê', '¸', '°', 'ë', '°', 'ĺ', 'ìĿ', 'ĺ', 'Ġ', 'í', 'ħ', 'į', 'ì', 'Ĭ', '¤', 'í', 'Ĭ', '¸', 'Ġì', 'ĥ', 'Ŀ', 'ì', 'Ħ', '±', 'Ġë', 'ª', '¨', 'ë', 'į', '¸', 'ì', 'ŀ', 'ħ', 'ëĭ', 'Ī', 'ëĭ', '¤', '.', 'ĠAI', 'ì', 'Ļ', 'Ģ', 'Ġë', '¨', '¸', 'ì', 'ĭ', 'ł', 'ë', 'Ł', '¬', 'ëĭ', 'Ŀ', 'ìĿ', 'Ħ', 'Ġ', 'í', 'Ļ', 'ľ', 'ì', 'ļ', '©', 'íķ', '©', 'ëĭ', 'Ī', 'ëĭ', '¤', '.']\n",
+      "\n",
+      "OpenAI 토크나이저 (cl100k_base):\n",
+      "  토큰 수: 33개\n",
+      "  토큰 ID: [49, 1929, 16969, 86422, 78326, 55216, 39277, 246, 21028, 10997, 45204, 54289, 53017, 55170, 69697, 116, 80052, 13, 15592, 81673, 5251, 101, 116, 83628, 61394, 9019, 251, 18359, 47932, 250, 27797, 61938, 13]\n",
+      "\n",
+      "토큰 수 차이: 48개\n",
+      "\n",
+      "============================================================\n",
+      "한국어 처리 성능 테스트\n",
+      "============================================================\n",
+      "한국어 텍스트별 토큰화 결과:\n",
+      "\n",
+      "1. '안녕하세요'\n",
+      "   토큰: ['ì', 'ķ', 'Ī', 'ë', 'ħ', 'ķ', 'íķ', 'ĺ', 'ì', 'Ħ', '¸', 'ì', 'ļ', 'Ķ']\n",
+      "   토큰 수: 14개\n",
+      "   문자당 토큰: 2.80\n",
+      "\n",
+      "2. '인공지능과 머신러닝'\n",
+      "   토큰: ['ìĿ', '¸', 'ê', '³', 'µ', 'ì', '§', 'Ģ', 'ë', 'Ĭ', '¥', 'ê', '³', '¼', 'Ġë', '¨', '¸', 'ì', 'ĭ', 'ł', 'ë', 'Ł', '¬', 'ëĭ', 'Ŀ']\n",
+      "   토큰 수: 25개\n",
+      "   문자당 토큰: 2.50\n",
+      "\n",
+      "3. '자연어 처리 기술'\n",
+      "   토큰: ['ì', 'ŀ', 'Ĳ', 'ì', 'Ĺ', '°', 'ì', 'ĸ', '´', 'Ġì', '²', 'ĺ', 'ë', '¦', '¬', 'Ġ', 'ê', '¸', '°', 'ì', 'Ī', 'ł']\n",
+      "   토큰 수: 22개\n",
+      "   문자당 토큰: 2.44\n",
+      "\n",
+      "4. '딥러닝 모델 학습'\n",
+      "   토큰: ['ë', 'Ķ', '¥', 'ë', 'Ł', '¬', 'ëĭ', 'Ŀ', 'Ġë', 'ª', '¨', 'ë', 'į', '¸', 'Ġ', 'íķ', 'Ļ', 'ì', 'Ĭ', 'µ']\n",
+      "   토큰 수: 20개\n",
+      "   문자당 토큰: 2.22\n",
+      "\n",
+      "5. '검색 기반 생성 모델'\n",
+      "   토큰: ['ê', '²', 'Ģ', 'ì', 'ĥ', 'ī', 'Ġ', 'ê', '¸', '°', 'ë', '°', 'ĺ', 'Ġì', 'ĥ', 'Ŀ', 'ì', 'Ħ', '±', 'Ġë', 'ª', '¨', 'ë', 'į', '¸']\n",
+      "   토큰 수: 25개\n",
+      "   문자당 토큰: 2.27\n",
+      "\n",
+      "============================================================\n",
+      "Document 객체와 함께 사용\n",
+      "============================================================\n",
+      "Document 분할 결과: 23개 청크\n",
+      "\n",
+      "Document Chunk 1:\n",
+      "  토큰 수: 23개\n",
+      "  메타데이터: {'source': 'ai-terminology.txt', 'type': 'glossary', 'tokenizer': 'gpt2'}\n",
+      "  내용: Semantic Search (의미론적 검색)...\n",
+      "\n",
+      "Document Chunk 2:\n",
+      "  토큰 수: 321개\n",
+      "  메타데이터: {'source': 'ai-terminology.txt', 'type': 'glossary', 'tokenizer': 'gpt2'}\n",
+      "  내용: 정의: 사용자의 질의를 단순한 키워드 매칭이 아니라 문맥과 의미를 분석하여 관련 정보를 반환하는 검색 방식.\n",
+      "예시: \"우주 탐사\"를 검색하면 \"아폴로 11호\", \"화성 탐사 로버\"...\n"
      ]
     }
    ],
