--- a/src/mylangchain_app/01RAG/010_RAG_Pipeline_3Embedding.ipynb
+++ b/src/mylangchain_app/01RAG/010_RAG_Pipeline_3Embedding.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "4cd87a33-0a37-461b-8f37-3c142e60b1f6",
    "metadata": {
     "id": "4cd87a33-0a37-461b-8f37-3c142e60b1f6"
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "id": "ed1f0805",
    "metadata": {},
    "outputs": [
@@ -34,7 +34,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "574A\n",
+      "\n",
       "up_o6\n"
      ]
     }
@@ -65,29 +65,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
+   "id": "bfe9a00f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#!pip install langchain_huggingface\n",
+    "#!pip install sentence-transformers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "26b3f2b8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/eon/skRookies/myLangChain/mylangchain-app/.venv/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "HuggingFace 임베딩 모델 설정 완료\n",
-      "[-0.033984892070293427, -0.041722651571035385, -0.04524903744459152, -0.026226386427879333, -0.12557649612426758]\n",
-      "4\n",
-      "[-0.033984892070293427, -0.041722651571035385, -0.04524903744459152, -0.026226386427879333, -0.12557649612426758]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from langchain_huggingface import HuggingFaceEmbeddings\n",
     "\n",
@@ -129,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "id": "890178a8",
    "metadata": {},
    "outputs": [
@@ -173,10 +165,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "e36c5442",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-0.01056357566267252, -0.017185701057314873, -0.021335240453481674, 0.011579539626836777, -0.010300404392182827]\n",
+      "4\n",
+      "[-0.010061589069664478, -0.0038776402361691, -0.02283499203622341, 0.009199891239404678, -0.012437594123184681]\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain_upstage import UpstageEmbeddings\n",
     "\n",
@@ -208,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "id": "b411396c",
    "metadata": {},
    "outputs": [
@@ -216,18 +218,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'langchain_ollama.embeddings.OllamaEmbeddings'>\n",
+      "<class 'langchain_upstage.embeddings.UpstageEmbeddings'>\n",
       "5 43\n",
-      "[유사도 0.5100] 자연어 처리는 기계가 인간 언어를 이해하고 생성할 수 있도록 돕는 기술입니다. \t <=====> \t 심층 학습을 적용한 언어 모델은 다양한 문맥을 학습하여 정교한 문장을 생성할 수 있습니다.\n",
-      "[유사도 0.6839] 자연어 처리는 기계가 인간 언어를 이해하고 생성할 수 있도록 돕는 기술입니다. \t <=====> \t 통계적 자연어 처리 기법과 신경망 모델은 언어 이해에 중요한 역할을 합니다.\n",
-      "[유사도 0.5742] 자연어 처리는 기계가 인간 언어를 이해하고 생성할 수 있도록 돕는 기술입니다. \t <=====> \t Neural networks have significantly improved the accuracy of machine translation.\n",
-      "[유사도 0.4181] 자연어 처리는 기계가 인간 언어를 이해하고 생성할 수 있도록 돕는 기술입니다. \t <=====> \t 안녕하세요? 만나서 반가워요.\n",
-      "[유사도 0.5536] 심층 학습을 적용한 언어 모델은 다양한 문맥을 학습하여 정교한 문장을 생성할 수 있습니다. \t <=====> \t 통계적 자연어 처리 기법과 신경망 모델은 언어 이해에 중요한 역할을 합니다.\n",
-      "[유사도 0.5467] 심층 학습을 적용한 언어 모델은 다양한 문맥을 학습하여 정교한 문장을 생성할 수 있습니다. \t <=====> \t Neural networks have significantly improved the accuracy of machine translation.\n",
-      "[유사도 0.3421] 심층 학습을 적용한 언어 모델은 다양한 문맥을 학습하여 정교한 문장을 생성할 수 있습니다. \t <=====> \t 안녕하세요? 만나서 반가워요.\n",
-      "[유사도 0.5953] 통계적 자연어 처리 기법과 신경망 모델은 언어 이해에 중요한 역할을 합니다. \t <=====> \t Neural networks have significantly improved the accuracy of machine translation.\n",
-      "[유사도 0.3732] 통계적 자연어 처리 기법과 신경망 모델은 언어 이해에 중요한 역할을 합니다. \t <=====> \t 안녕하세요? 만나서 반가워요.\n",
-      "[유사도 0.3970] Neural networks have significantly improved the accuracy of machine translation. \t <=====> \t 안녕하세요? 만나서 반가워요.\n"
+      "[유사도 0.5772] 자연어 처리는 기계가 인간 언어를 이해하고 생성할 수 있도록 돕는 기술입니다. \t <=====> \t 심층 학습을 적용한 언어 모델은 다양한 문맥을 학습하여 정교한 문장을 생성할 수 있습니다.\n",
+      "[유사도 0.6375] 자연어 처리는 기계가 인간 언어를 이해하고 생성할 수 있도록 돕는 기술입니다. \t <=====> \t 통계적 자연어 처리 기법과 신경망 모델은 언어 이해에 중요한 역할을 합니다.\n",
+      "[유사도 0.4389] 자연어 처리는 기계가 인간 언어를 이해하고 생성할 수 있도록 돕는 기술입니다. \t <=====> \t Neural networks have significantly improved the accuracy of machine translation.\n",
+      "[유사도 0.3613] 자연어 처리는 기계가 인간 언어를 이해하고 생성할 수 있도록 돕는 기술입니다. \t <=====> \t 안녕하세요? 만나서 반가워요.\n",
+      "[유사도 0.5548] 심층 학습을 적용한 언어 모델은 다양한 문맥을 학습하여 정교한 문장을 생성할 수 있습니다. \t <=====> \t 통계적 자연어 처리 기법과 신경망 모델은 언어 이해에 중요한 역할을 합니다.\n",
+      "[유사도 0.4519] 심층 학습을 적용한 언어 모델은 다양한 문맥을 학습하여 정교한 문장을 생성할 수 있습니다. \t <=====> \t Neural networks have significantly improved the accuracy of machine translation.\n",
+      "[유사도 0.3321] 심층 학습을 적용한 언어 모델은 다양한 문맥을 학습하여 정교한 문장을 생성할 수 있습니다. \t <=====> \t 안녕하세요? 만나서 반가워요.\n",
+      "[유사도 0.5176] 통계적 자연어 처리 기법과 신경망 모델은 언어 이해에 중요한 역할을 합니다. \t <=====> \t Neural networks have significantly improved the accuracy of machine translation.\n",
+      "[유사도 0.2819] 통계적 자연어 처리 기법과 신경망 모델은 언어 이해에 중요한 역할을 합니다. \t <=====> \t 안녕하세요? 만나서 반가워요.\n",
+      "[유사도 0.2206] Neural networks have significantly improved the accuracy of machine translation. \t <=====> \t 안녕하세요? 만나서 반가워요.\n"
      ]
     }
    ],
@@ -272,111 +274,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "2c77547c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "1. 기본 모델 로딩 및 임베딩\n",
-      "----------------------------------------\n",
-      "모델 로딩 중... (최초 실행시 다운로드 시간 소요)\n",
-      "모델 로딩 완료\n",
-      "모델명: sentence-transformers/all-MiniLM-L6-v2\n",
-      "\n",
-      "쿼리 텍스트: 자연어 처리는 기계가 인간 언어를 이해하는 기술입니다.\n",
-      "쿼리 임베딩 차원: 384\n",
-      "쿼리 임베딩 타입: <class 'list'>\n",
-      "벡터 샘플 (처음 10개): [-0.02077849581837654, 0.06788306683301926, 0.1190248504281044, -0.03419819474220276, -0.07493330538272858, -0.02247793786227703, 0.10219977796077728, 0.03128678724169731, 0.019729789346456528, -0.0033760080114006996]\n",
-      "\n",
-      "문서 텍스트 (4개):\n",
-      "  1. 인공지능은 다양한 산업에서 활용됩니다.\n",
-      "  2. 자연어 처리는 언어를 분석하는 기술입니다.\n",
-      "  3. 딥러닝을 활용한 모델이 성능이 좋습니다.\n",
-      "  4. 머신러닝과 데이터 사이언스는 밀접한 관련이 있습니다.\n",
-      "\n",
-      "생성된 문서 벡터 개수: 4\n",
-      "각 벡터 차원: 384\n",
-      "\n",
-      "============================================================\n",
-      "2. 다양한 HuggingFace 모델 비교\n",
-      "============================================================\n",
-      "\n",
-      "모델: sentence-transformers/all-MiniLM-L6-v2\n",
-      "설명: 소형 모델, 빠른 속도\n",
-      "예상 차원: 384\n",
-      "로딩 시간: 3.13초\n",
-      "임베딩 시간: 0.104초\n",
-      "실제 차원: 384\n",
-      "벡터 샘플: [-0.03664565458893776, 0.05494256690144539, 0.024646177887916565, 0.002711866283789277, -0.015743877738714218]\n",
-      "\n",
-      "모델: sentence-transformers/all-mpnet-base-v2\n",
-      "설명: 중형 모델, 균형잡힌 성능\n",
-      "예상 차원: 768\n",
-      "로딩 시간: 16.24초\n",
-      "임베딩 시간: 1.027초\n",
-      "실제 차원: 768\n",
-      "벡터 샘플: [0.027967287227511406, -0.14178238809108734, 0.0019791305530816317, 0.01800161600112915, 0.02986299619078636]\n",
-      "\n",
-      "모델: sentence-transformers/paraphrase-multilingual-MiniLM-L12-v2\n",
-      "설명: 다국어 지원 모델\n",
-      "예상 차원: 384\n",
-      "로딩 시간: 3.81초\n",
-      "임베딩 시간: 0.291초\n",
-      "실제 차원: 384\n",
-      "벡터 샘플: [-0.16666170954704285, -0.002662484999746084, -0.019969046115875244, -0.16203424334526062, -0.18823793530464172]\n",
-      "\n",
-      "============================================================\n",
-      "3. 모델 설정 옵션들\n",
-      "============================================================\n",
-      "기본 설정:\n",
-      "커스텀 설정:\n",
-      "\n",
-      "기본 설정 벡터 크기: 1.000000\n",
-      "정규화 설정 벡터 크기: 1.000000\n",
-      "정규화된 벡터는 크기가 1.0에 가까워집니다.\n",
-      "\n",
-      "============================================================\n",
-      "4. 벡터 유사도 분석\n",
-      "============================================================\n",
-      "유사도 분석:\n",
-      "\n",
-      "1. '딥러닝은 인공지능의 핵심 기술입니다.'\n",
-      "   유사도: 1.0000\n",
-      "   상태: 매우 유사\n",
-      "\n",
-      "2. '딥러닝은 AI의 중요한 기술입니다.'\n",
-      "   유사도: 0.7268\n",
-      "   상태: 유사\n",
-      "\n",
-      "3. '머신러닝과 인공지능은 관련이 있습니다.'\n",
-      "   유사도: 0.8169\n",
-      "   상태: 매우 유사\n",
-      "\n",
-      "4. '자연어 처리는 언어 분석 기술입니다.'\n",
-      "   유사도: 0.8321\n",
-      "   상태: 매우 유사\n",
-      "\n",
-      "5. '오늘 날씨가 맑고 화창합니다.'\n",
-      "   유사도: 0.5843\n",
-      "   상태: 관련\n",
-      "\n",
-      "============================================================\n",
-      "5. 성능 벤치마크\n",
-      "============================================================\n",
-      "테스트 문서 수: 20개\n",
-      "\n",
-      "HuggingFace 임베딩 성능:\n",
-      "처리 시간: 0.267초\n",
-      "문서당 평균 시간: 13.4ms\n",
-      "벡터 차원: 384\n",
-      "메모리 사용량 (추정): 30.0KB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# pip install langchain-huggingface sentence-transformers\n",
     "from langchain_huggingface import HuggingFaceEmbeddings\n",
@@ -630,38 +531,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "59130d82",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "원본 텍스트: 심층 신경망을 활용한 자연어 처리는 문맥을 이해하고 텍스트 생성을 가능하게 하는 강력한 기술로 자리 잡았습니다.\n",
-      "텍스트 길이: 62자\n",
-      "\n",
-      "============================================================\n",
-      "1. 기본 임베딩 - embed_query vs embed_documents\n",
-      "============================================================\n",
-      "\n",
-      "1-1. embed_query (단일 텍스트 임베딩):\n",
-      "임베딩 벡터 차원: 1536\n",
-      "벡터 타입: <class 'list'>\n",
-      "처음 10개 값: [0.006818306632339954, 0.06312268227338791, 0.028553564101457596, 0.030260682106018066, -0.005797084886580706, -0.01953023113310337, -0.018453121185302734, 0.033979758620262146, -0.023289954289793968, 0.030016807839274406]\n",
-      "벡터 범위: -0.091128 ~ 0.106654\n",
-      "\n",
-      "1-2. embed_documents (여러 텍스트 임베딩):\n",
-      "입력 텍스트 수: 4\n",
-      "생성된 벡터 수: 4\n",
-      "각 벡터 차원: 1536\n",
-      "문서 1 벡터 처음 5개: [0.003618349088355899, 0.05510503798723221, 0.01815677620470524, 0.033712297677993774, 0.004866952542215586]\n",
-      "문서 2 벡터 처음 5개: [0.0024918364360928535, 0.011953924782574177, -0.008095597848296165, 0.009720458649098873, 0.005239172372967005]\n",
-      "문서 3 벡터 처음 5개: [-0.003504116553813219, 0.033904965966939926, 0.006555764935910702, -0.01825961470603943, 0.012518293224275112]\n",
-      "문서 4 벡터 처음 5개: [0.024151062592864037, 0.04165542125701904, -0.0009663004893809557, 0.0012952813412994146, 0.0021906252950429916]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from langchain_openai import OpenAIEmbeddings\n",
     "import numpy as np\n",
@@ -711,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "id": "f670c885",
    "metadata": {},
    "outputs": [
@@ -727,69 +600,39 @@
       "모델: text-embedding-3-small\n",
       "설명: 소형 모델, 빠른 속도\n",
       "기본 차원: 1536\n",
-      "실제 차원: 1536\n",
-      "벡터 샘플: [0.0032952239271253347, 0.0033729278948158026, 0.022850723937153816]\n",
+      "오류: Error code: 401 - {'error': {'message': 'Incorrect API key provided: gsk_TeaT********************************************Pyfc. You can find your API key at https://platform.openai.com/account/api-keys.', 'type': 'invalid_request_error', 'param': None, 'code': 'invalid_api_key'}}\n",
       "\n",
       "모델: text-embedding-3-large\n",
       "설명: 대형 모델, 높은 품질\n",
       "기본 차원: 3072\n",
-      "실제 차원: 3072\n",
-      "벡터 샘플: [-0.009711259976029396, -0.00444471649825573, -0.01929924637079239]\n",
+      "오류: Error code: 401 - {'error': {'message': 'Incorrect API key provided: gsk_TeaT********************************************Pyfc. You can find your API key at https://platform.openai.com/account/api-keys.', 'type': 'invalid_request_error', 'param': None, 'code': 'invalid_api_key'}}\n",
       "\n",
       "모델: text-embedding-ada-002\n",
       "설명: 레거시 모델, 안정성\n",
       "기본 차원: 1536\n",
-      "실제 차원: 1536\n",
-      "벡터 샘플: [-0.009747270494699478, -0.01703539863228798, 0.01346345990896225]\n",
+      "오류: Error code: 401 - {'error': {'message': 'Incorrect API key provided: gsk_TeaT********************************************Pyfc. You can find your API key at https://platform.openai.com/account/api-keys.', 'type': 'invalid_request_error', 'param': None, 'code': 'invalid_api_key'}}\n",
       "\n",
       "============================================================\n",
       "3. 차원 축소 기능 테스트 (text-embedding-3-small)\n",
       "============================================================\n",
       "\n",
       "차원: 256\n",
-      "설정 차원: 256, 실제 차원: 256\n",
-      "벡터 샘플: [0.00685805594548583, 0.007019774056971073, 0.04755717143416405, -0.07427065074443817, 0.04319676756858826]\n",
-      "평균: -0.002723\n",
-      "표준편차: 0.062441\n",
+      "오류: Error code: 401 - {'error': {'message': 'Incorrect API key provided: gsk_TeaT********************************************Pyfc. You can find your API key at https://platform.openai.com/account/api-keys.', 'type': 'invalid_request_error', 'param': None, 'code': 'invalid_api_key'}}\n",
       "\n",
       "차원: 512\n",
-      "설정 차원: 512, 실제 차원: 512\n",
-      "벡터 샘플: [0.004726302810013294, 0.004837752785533667, 0.032774534076452255, -0.051184412091970444, 0.029769515618681908]\n",
-      "평균: -0.000787\n",
-      "표준편차: 0.044187\n",
+      "오류: Error code: 401 - {'error': {'message': 'Incorrect API key provided: gsk_TeaT********************************************Pyfc. You can find your API key at https://platform.openai.com/account/api-keys.', 'type': 'invalid_request_error', 'param': None, 'code': 'invalid_api_key'}}\n",
       "\n",
       "차원: 1024\n",
-      "설정 차원: 1024, 실제 차원: 1024\n",
-      "벡터 샘플: [0.003716598730534315, 0.003804239211603999, 0.02577274665236473, -0.04024962708353996, 0.023409703746438026]\n",
-      "평균: -0.000084\n",
-      "표준편차: 0.031250\n",
+      "오류: Error code: 401 - {'error': {'message': 'Incorrect API key provided: gsk_TeaT********************************************Pyfc. You can find your API key at https://platform.openai.com/account/api-keys.', 'type': 'invalid_request_error', 'param': None, 'code': 'invalid_api_key'}}\n",
       "\n",
       "차원: 1536\n",
-      "설정 차원: 1536, 실제 차원: 1536\n",
-      "벡터 샘플: [0.0032952239271253347, 0.0033729278948158026, 0.022850723937153816, -0.03568626940250397, 0.020755594596266747]\n",
-      "평균: -0.000090\n",
-      "표준편차: 0.025515\n",
+      "오류: Error code: 401 - {'error': {'message': 'Incorrect API key provided: gsk_TeaT********************************************Pyfc. You can find your API key at https://platform.openai.com/account/api-keys.', 'type': 'invalid_request_error', 'param': None, 'code': 'invalid_api_key'}}\n",
       "\n",
       "============================================================\n",
       "4. 벡터 유사도 계산\n",
       "============================================================\n",
       "유사도 테스트:\n",
-      "1. '인공지능과 머신러닝 기술'\n",
-      "   유사도: 1.0000\n",
-      "   -> 매우 유사\n",
-      "\n",
-      "2. 'AI와 기계학습 알고리즘'\n",
-      "   유사도: 0.5016\n",
-      "   -> 관련\n",
-      "\n",
-      "3. '자연어 처리와 딥러닝'\n",
-      "   유사도: 0.2871\n",
-      "   -> 무관\n",
-      "\n",
-      "4. '요리 레시피와 음식 문화'\n",
-      "   유사도: 0.1229\n",
-      "   -> 무관\n",
-      "\n"
+      "유사도 계산 오류: Error code: 401 - {'error': {'message': 'Incorrect API key provided: gsk_TeaT********************************************Pyfc. You can find your API key at https://platform.openai.com/account/api-keys.', 'type': 'invalid_request_error', 'param': None, 'code': 'invalid_api_key'}}\n"
      ]
     }
    ],
@@ -903,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "id": "c626879d",
    "metadata": {},
    "outputs": [
@@ -916,15 +759,7 @@
       "5. 배치 처리 성능 비교\n",
       "============================================================\n",
       "방법 1: 개별 embed_query 호출\n",
-      "처리 시간: 5.77초\n",
-      "결과 수: 10\n",
-      "\n",
-      "방법 2: embed_documents 배치 호출\n",
-      "처리 시간: 1.74초\n",
-      "결과 수: 10\n",
-      "\n",
-      "성능 개선: 3.3배 빠름\n",
-      "결과 일치도: 0.999672 (1.0에 가까울수록 동일)\n"
+      "배치 처리 테스트 오류: Error code: 401 - {'error': {'message': 'Incorrect API key provided: gsk_TeaT********************************************Pyfc. You can find your API key at https://platform.openai.com/account/api-keys.', 'type': 'invalid_request_error', 'param': None, 'code': 'invalid_api_key'}}\n"
      ]
     }
    ],
@@ -980,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "id": "6a2246a8",
    "metadata": {},
    "outputs": [
@@ -995,37 +830,7 @@
       "언어별 임베딩 특성:\n",
       "\n",
       "한국어 텍스트:\n",
-      "  1. '인공지능 기술의 발전'\n",
-      "     벡터 크기: 1.000000\n",
-      "     샘플: [0.020138520747423172, 0.022083548828959465, 0.01017898041754961]\n",
-      "  2. '자연어 처리와 머신러닝'\n",
-      "     벡터 크기: 1.000000\n",
-      "     샘플: [0.02416202239692211, 0.04194703698158264, 0.03976252302527428]\n",
-      "  3. '딥러닝 모델의 활용'\n",
-      "     벡터 크기: 1.000000\n",
-      "     샘플: [0.025226473808288574, 0.0076536634005606174, -0.0033230814151465893]\n",
-      "\n",
-      "영어 텍스트:\n",
-      "  1. 'Artificial intelligence technology development'\n",
-      "     벡터 크기: 1.000000\n",
-      "     샘플: [-0.003238704986870289, -0.03795177862048149, 0.01901528425514698]\n",
-      "  2. 'Natural language processing and machine learning'\n",
-      "     벡터 크기: 1.000000\n",
-      "     샘플: [-0.03510593622922897, 0.024269666522741318, 0.04000912606716156]\n",
-      "  3. 'Application of deep learning models'\n",
-      "     벡터 크기: 1.000000\n",
-      "     샘플: [-0.011635662987828255, -0.037702687084674835, 0.046808335930109024]\n",
-      "\n",
-      "혼합 텍스트:\n",
-      "  1. 'AI 인공지능 technology 기술'\n",
-      "     벡터 크기: 1.000000\n",
-      "     샘플: [0.0079149529337883, 0.03108207881450653, 0.004009472671896219]\n",
-      "  2. 'Machine learning 머신러닝 algorithms'\n",
-      "     벡터 크기: 1.000000\n",
-      "     샘플: [-0.008336921222507954, -0.008430101908743382, 0.026770232245326042]\n",
-      "  3. 'Deep learning 딥러닝 applications'\n",
-      "     벡터 크기: 1.000000\n",
-      "     샘플: [-0.00019496948516461998, -0.04463654384016991, 0.02195126935839653]\n"
+      "언어 비교 테스트 오류: Error code: 401 - {'error': {'message': 'Incorrect API key provided: gsk_TeaT********************************************Pyfc. You can find your API key at https://platform.openai.com/account/api-keys.', 'type': 'invalid_request_error', 'param': None, 'code': 'invalid_api_key'}}\n"
      ]
     }
    ],
@@ -1072,12 +877,6 @@
     "    print(f\"언어 비교 테스트 오류: {e}\")\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d7d910ef",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
