--- a/src/mylangchain_app/01RAG/010_RAG_Pipeline_4Chroma_FAISS.ipynb
+++ b/src/mylangchain_app/01RAG/010_RAG_Pipeline_4Chroma_FAISS.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "b76f68a8-4745-4377-8057-6090b87377d1",
    "metadata": {
     "id": "b76f68a8-4745-4377-8057-6090b87377d1"
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "218ba88a",
    "metadata": {},
    "outputs": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "f6c371fd",
    "metadata": {},
    "outputs": [
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "7055bd32",
    "metadata": {},
    "outputs": [
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "4585881f",
    "metadata": {},
    "outputs": [
@@ -489,71 +489,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "13183274",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "==================================================\n",
-      "유사도 점수와 함께 검색\n",
-      "==================================================\n",
-      "\n",
-      " [Query]: 학습에는 어떤것들이 있나요?\n",
-      "\n",
-      "[Result 1] (Score: 0.8905):\n",
-      "Few-shot Learning (퓨샷 학습)\n",
-      "\n",
-      "정의: 적은 양의 데이터로도 새로운 작업을 수행할 수 있도록 하는 학습 방법.\n",
-      "예시: ChatGPT가 몇 개의 예제만으로도 새로운 질문에 적절한 답을 생성함.\n",
-      "연관 키워드: 샘플 효율성, 전이 학습, 메타 학습\n",
-      "\n",
-      "Reinforcement Learning (강화 학습)...\n",
-      "\n",
-      "[Result 2] (Score: 0.8986):\n",
-      "정의: 보상을 극대화하는 방향으로 행동을 학습하는 AI 기법.\n",
-      "예시: 알파고가 바둑에서 최적의 수를 찾기 위해 강화 학습을 활용.\n",
-      "연관 키워드: 보상 시스템, 정책 학습, 게임 AI\n",
-      "\n",
-      "Prompt Engineering (프롬프트 엔지니어링)\n",
-      "\n",
-      "정의: AI 모델이 원하는 출력을 생성하도록 입력을 최적화하는 기술.\n",
-      "예시: \"한 문장으로 요약해줘\"라는 입력을 통해 짧은 답변을 유도.\n",
-      "연관 키워드: 자연어 생성, GPT, 입력 최적화...\n",
-      "\n",
-      "[Result 3] (Score: 0.9524):\n",
-      "Self-Attention (자기 주의 메커니즘)\n",
-      "\n",
-      "정의: 문장의 모든 단어가 서로에게 가중치를 부여하여 문맥을 이해하는 방식.\n",
-      "예시: \"나는 강아지를 좋아한다\"에서 \"나는\"과 \"좋아한다\"가 강한 연관성을 가짐.\n",
-      "연관 키워드: 트랜스포머, BERT, 문맥 학습\n",
-      "\n",
-      "Fine-Tuning (미세 조정)...\n",
-      "\n",
-      "[Result 4] (Score: 0.9693):\n",
-      "Zero-shot Learning (제로샷 학습)\n",
-      "\n",
-      "정의: 특정 태스크에 대한 데이터 없이도 기존 학습된 지식을 활용하여 예측하는 AI 기술.\n",
-      "예시: AI가 새로운 언어를 학습하지 않았지만, 문맥을 기반으로 번역 가능.\n",
-      "연관 키워드: 전이 학습, 일반화 능력, NLP\n",
-      "\n",
-      "Few-shot Learning (퓨샷 학습)...\n",
-      "\n",
-      "[Result 5] (Score: 0.9920):\n",
-      "Fine-Tuning (미세 조정)\n",
-      "\n",
-      "정의: 사전 학습된 모델을 특정 작업에 맞게 추가 학습하는 과정.\n",
-      "예시: GPT 모델을 법률 문서 요약에 맞게 학습.\n",
-      "연관 키워드: 전이 학습, 모델 최적화, AI 응용\n",
-      "\n",
-      "Zero-shot Learning (제로샷 학습)...\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 13. 유사도 점수와 함께 검색\n",
     "print(\"\\n\" + \"=\"*50)\n",
@@ -579,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "ec4fa42c",
    "metadata": {},
    "outputs": [
@@ -628,7 +567,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "faiss-env",
    "language": "python",
    "name": "python3"
   },
@@ -642,7 +581,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
